--- a/committees.html
+++ b/committees.html
@@ -7,15 +7,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-        content="The program committee is delighted to invite you to the 16th Workshop on Mobility in the Evolving Internet Architecture MobiArch 2022. The workshop will be held on the 21st Oct, 2022. MobiArch is in conjunction with MobiCom 2022">
-    <title>MobiArch 2022</title>
+       content="The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom) 2023. The workshop will be held on the xx Oct, 2023. Immercom is in conjunction with MobiCom 2023">
+    <title>Immercom 2023</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="jumbotron.css" rel="stylesheet">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="index.html">MobiArch 2022</a>
+        <a class="navbar-brand" href="index.html">Immercom 2023</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -44,63 +44,22 @@
     <main role="main">
         <div class="jumbotron">
             <div class="container">
-                <h1 class="display-3">MobiArch 2022</h1>
-                <p> <h5>Workshop on Mobility in the Evolving Internet Architecture to be held in conjunction with MobiCom
-                    2022 </h5></p>
-                <p><h5> Sydney, Australia,  <b>  </b> 21st Oct, 2022 </h5></p>
+                <h1 class="display-3">Immercom 2023</h1>
+                <p> <h5>Workshop on Mobile Immersive Computing, Networking, and Systems to be held in conjunction with MobiCom 2023 </h5></p>
+                <p><h5> xx, xx,  <b>  </b> xx Oct, 2023 </h5></p>
             </div>
         </div>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Workshop Co-Chairs</h2>
-                </div>
-            </div>
-            <div class="col">
-                <div class="row-md-4 small-text">
-                    <p class="text-center"><img src="Stefano.jpg" alt="Photo of Stefano Secci" height="250"></p>
-                    <p class="text-justify"><u><b>Prof. Stefano Secci</b></u> (stefano.secci@cnam.fr) is professor of networking 
-                    at Cnam, Paris, France. He received his M.Sc. degree in communications engineering 
-                    from the Politecnico di Milano, Italy, in 2005, and a dual Ph.D. degree in computer science and networks 
-                    from the Politecnico di Milano and Télécom Paris-Tech, France. He held postdoctoral positions at NTNU, 
-                    Norway, and GMU, United States. He was an associate professor with Sorbonne University-UPMC, Paris, France, 
-                    from 2010 to 2018. He has also covered positions at NTNU, George Mason University, Fastweb Italia, and Ecole 
-                    Polytechnique de Montréal. His current research resides at the edges between intelligent communication networks, 
-                    distributed systems, mobile computing and embedded systems. He is the head of the Network and IoT Systems research 
-                    group at Cnam.</p>
-                </div>
-                <div class="row-md-4 small-text">
-                    <p class="text-center"><img src="Yipeng.png" alt="Photo of Yipeng Zhou" height="250"></p>
-                    <p class="text-justify"><u><b>Dr. Yipeng Zhou</b></u> (yipeng.zhou@mq.edu.au) is a senior lecturer in computer science with 
-                    School of Computing of Faculty of Science and Engineering (FSE) at Macquarie University, Australia. He received his PhD 
-                    degree from The Chinese University of Hong Kong in 2012 and was the recipient of Australia Research Council Discover Early 
-                    Career Research Award (ARC DECRA) in 2018. His research interests lie in distributed/federated learning, privacy protection 
-                    and networking. He has published more than 90 peer-reviewed papers including IEEE INFOCOM, IEEE/ACM ToN, IEEE JSAC, IEEE TPDS, 
-                    IEEE TMC, etc. He served as Area Chairs of IEEE ICME 2021, 2022, Publicity Co-Chair of IEEE DSAA 2022, TPC members of IJCAI, 
-                    ICDCS, ICC, GLOBECOM, etc., and the leading guest editor of Digital Communications Networks, etc. </p>
-                </div>
-                <div class="row-md-4 small-text">
-                    <p class="text-center"><img src="Lorenzo.png" alt="Photo of Lorenzo Bertizzolo" height="250"></p>
-                    <p class="text-justify"><u><b>Dr. Lorenzo Bertizzolo</b></u> (lbertizzolo@apple.com) is a wireless systems engineer at Apple working 
-                    on 5G cellular software for iOS. He earned his Ph.D. in Computer Engineering at Northeastern University, in 2021. 
-                    As a researcher, he worked with AT&T Labs Research, Facebook Connectivity Labs, and Google, network infrastructure team.
-                    His focus is 5G/6G networks, wireless networked systems, software-defined networking for wireless systems, MIMO communications, and Non Terrestrial Networks. 
-                    He earned the “Electrical and Computer Engineering Outstanding Research Award” from Northeastern University in 2020 and the “WiNTECH Best Paper Award” in 2019. </p>
-                </div>
-            </div>
+        <div class="container">           
             <div class="row">
                 <div class="col-md-12">
                     <h2>Steering Committe</h2>
                     <ul>
-                        <li>Jon Crowcroft, University of Cambridge</li>
-                        <li>Katherine Guo, Bell Labs Research</li>
-                        <li>Stefano Secci, Cnam, Paris</li>
-                        <li>Jianhua He, University of Essex</li>
-                        <li>Michele Nogueira, Federal Univ. of Parana</li>
-                        <li>Xiaoming Fu, University of Goettingen</li>
+                        <li>Charlie Hu, Purdue University, USA</li>
+                        <li>Klara Nahrstedt, University of Illinois at Urbana-Champaign, USA</li>
+                        <li>Lili Qiu, Cnam, University of Texas at Austin</li>
                     </ul>
-					<h2>Technical Program Committee</h2>
+					<h2>Program Co-chairs</h2>
                     <ul>
                         <li>Sudipta	Acharya, SZU China</li>
                         <li>Deyu Zhang, Central South University</li>
