--- a/committees.html
+++ b/committees.html
@@ -59,69 +59,46 @@
                         <li>Klara Nahrstedt, University of Illinois at Urbana-Champaign, USA</li>
                         <li>Lili Qiu, Cnam, University of Texas at Austin</li>
                     </ul>
-					<h2>Program Co-chairs</h2>
+		    <h2>Program Co-chairs</h2>
                     <ul>
-                        <li>Sudipta	Acharya, SZU China</li>
-                        <li>Deyu Zhang, Central South University</li>
-                        <li>Mengwei	Xu, Beijing University of Posts and Telecommunications</li>
-                        <li>Young Choon	Lee, Macquarie University</li>
-                        <li>Xi Zheng, Macquarie University</li>
-						<li>Miao Hu, Sun Yat-sen University</li>
-                        <li>Weifeng	Sun, Dalian University of Technology</li>
-                        <li>Rodrigo	Couto, Universidade Federal do Rio de Janeiro</li>
-                        <li>Taotao Wang, Shenzhen University</li>
-                        <li>Youyang	Qu, CSIRO</li>
-                        <li>Shu	Yang, Shenzhen University</li>
-						<li>Yaodong	Huang, Shenzhen University</li>
-						<li>Anna Brunstrom, Karlstad University</li>
-                        <li>Giuseppe Caso, Ericsson Research</li>
-                        <li>Haisheng Tan, University of Science and Technology of China</li>
-                        <li>Thi Mai Trang Nguyen, University of Paris 6</li>
-                        <li>Wei	Wang, Huazhong University of Science and Technology</li>
-                        <li>Jessie Hui Wang, Tsinghua University</li>
-						<li>Michele	Polese, Northeastern University</li>
-						<li>Razvan Stanica, INSA Lyon</li>
-						<li>Zuoyin Tang, Aston University</li>						
-						<li>Lorenzo	Ghiro, University of Brescia</li>						
-						<li>Dario Bega, Nokia Bell Labs</li>						
-						<li>Zhangyu	Guan, University of NY at Buffalo</li>						
-						<li>Pedram Johari, Northeastern University</li>						
-						<li>Nan	Cen, Missouri University of Science and Technology</li>						
-						<li>Andrea Ferlini, Nokia Bell Labs</li>						
-						<li>Salvatore D'Oro, Northeastern University</li>						
-						<li>Jincao Zhu, University of Utah, USA</li>
+                        <li>Bo Han, George Mason University, USA</li>
+                        <li>Robert LiKamWa, Arizona State University, USA</li>
+                        <li>Feng Qian, University of Minnesota, USA</li>
                     </ul>
-                    <!-- <h2>TPC(tentative list)</h2>
-					To be announced. -->
-<!--                    <ul>
-                         <li>Miao Hu, Sun Yat-sen University, China</li>
-                        <li>Mai-Trang Thi-Nguyen, Sorbonne Université - LIP6, France</li>
-                        <li>Michele Polese, Northeastern University, USA</li>
-						<li>James Xi Zheng, Macquarie University, Australia</li>
-                        <li>Mengwei Xu, Beijing University of Posts and Telecommunications, China</li>
-                        <li>Giuseppe Caso, Simula Metropolitan Center for Digital Engineering, Norway</li>
-                        <li>Andra Lutu, Telefonica I+D, Spain</li>
-                        <li>Anna Brunström, Karlstad University, Sweden</li>
-                        <li>Yuanchao Shu, Microsoft Research, USA</li>
-                        <li>Haisheng Tan, University of Science and Technology of China (USTC), China</li>
-                        <li>Rodrigo de Souza Couto, Federal University Rio de Janeiro (UFRJ), Brazil</li>
-                        <li>Razvan Stanica, INSA Lyon, France</li>
-                        <li>Bruno Y. L. Kimura, Sao Paulo Federal University (UNIFESP), Brazil</li>
+		    <h2>Web Chair</h2>
+                    <ul>
+                        <li>Puqi Zhou, George Mason University, USA</li>
+                    </ul>
+		    <h2>Publicity Chair</h2>
+                    <ul>
+                    <li>Ruizhi Cheng, George Mason University, USA</li>
+                    </ul>
+					<h2>Technical Program Committee</h2>
+                    <ul>
                         <li>Özgü Alay, University of Oslo, Norway</li>
-                        <li>Anna-Maria Mandalari, Imperial College London, UK</li>
-                        <li>Rebecca Steinert, Amazon, Germany</li>
-                        <li>Salah Eddine Elayoubi, CentraleSupélec, France</li>  
-                        <li> Michele Gucciardo, IMDEA Networks, Spain </li> 
-						<li>Young Lee, Macquarie University, Australia</li>
-						<li>Shui Yu, University of Technology, Sydney, Australia</li>
-						<li>Keshav Sood, Deakin University, Australia</li>
-						<li>Taotao Wang, Shenzhen University, China</li>
-						<li>Weifeng Sun, Dalian University of Technology, China</li>
-						<li>Deyu Zhang, Central South University, China</li>
-						<li>Youyang Qu, Deakin University, Australia</li>
-						<li>Mengwei Xu, Beijing University of Posts and Telecommunications, China</li>
-						<li>Yifan Zhang, Binghamton University, USA</li>
-                    </ul> -->
+                        <li>Bhojan Anand, National University of Singapore, Singapore</li>
+                        <li>Kittipat Apicharttrisorn, Nokia Bell Labs, USA</li>
+                        <li>Dimitris Chatzopoulos, University College Dublin, Ireland</li>
+                        <li>Bo Chen , University of Illinois at Urbana-Champaign, USA</li>
+			<li>Mallesham Dasar, Carnegie Mellon University, USA</li>
+                        <li>Jeroen Famaey, University of Antwerp, Belgium</li>
+                        <li>Huber Flores, University of Tartu, Estonia</li>
+                        <li>Sebastian Friston, University College London, UK</li>
+                        <li>Sokol Kosta, Aalborg University, Denmark</li>
+			<li>Guillaume Lavoué ENISE, Ecole Centrale de Lyon, LIRIS CNRS, France</li>    
+			<li>Youngki Lee, Seoul National University, South Korea</li>
+			<li>Xiaoli Liu, University of Helsinki, Finland</li>
+			<li>Jiayi Meng, Purdue University, USA</li>
+			<li>Mario Montagud, University of Valencia & i2CAT Foundation, Spain</li>
+                        <li>Niall Murray, Athlone Institute of Technology, Ireland</li>
+                        <li>Xiuquan Qiao, Beijing University of Posts and Telecommunications, China</li>
+                        <li>Sanja Scepanovic, Nokia Bell Labs, UK</li>
+                        <li>Xiang Su, Norwegian University of Science and Technology, Norway</li>
+			<li>Sheng Wei, Rutgers University, USA</li>
+			<li>Di Wu, Sun Yat-sen University, China</li>
+			<li>Hui-Yin Wu, Inria, France</li>						
+			<li>Zehui Xiong, Singapore University of Technology and Design, Singapore</li>				
+			</ul>                    
                 </div>
             </div>
             <hr>
