--- a/program.html
+++ b/program.html
@@ -49,13 +49,9 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <h2>Welcome</h2>
-                    <p>The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom) 2023. 
-					<br> The workshop will be held on the xx of October 2023, in conjunction with <a
-                            href="https://www.sigmobile.org/mobicom/2023/">MobiCom 2023</a></p>
+                <div class="col-md-12">                   
                     <h3><FONT COLOR="red"> Updates</h3>
-                        <p> <b>[April 23rd] This website is under construction.</b>
+                        <p> <b>[April 23rd] TOB.</b>
                     </font>
 
                 </div>
