--- a/call.html
+++ b/call.html
@@ -70,24 +70,18 @@
                     <p>Key research topics include but are not limited to: 
                     </p>
                     <ul>
+                        <li>Algorithms, theories, tools, and testbeds for AR/VR/MR and the metaverse</li>
                         <li>Development/Deployment challenges of 5G and beyond for AR/VR/MR and the metaverse</li>
-                        <!-- <li>Future Internet and next-generation networking architectures</li> -->
                         <li>Edge computing, digital twins, and IoT for AR/VR/MR and the metaverse</li>
-                        <!-- <li>Joint communication, computing, networking and computing architecture design</li> -->
                         <li>Efficient visual sensing for augmentation and visualization</li>
+                        <li>Generative AI for immersive systems and applications</li>
                         <li>Harassment detection and prevention in the metaverse</li>
-                        <!-- <li>Network virtualization in mobile Internet architecture</li> -->
                         <li>High-performance and scalable rendering for mobile graphics</li>
                         <li>Immersive content delivery for mobile devices</li>
+                        <li>Internet routing and address for immersive systems and applications</li>
                         <li>Machine learning, data science, and blockchains for AR/VR/MR and the metaverse</li>
-                        <!-- <li>Next generation heterogenous radio access networks</li> -->
-                        <li>Algorithms, theories, tools, and testbeds for AR/VR/MR and the metaverse</li>
                         <li>Multi-user spatial synchronization and 6DoF pose prediction in AR/MR</li>
-                        <!-- <li>Information-Centric Networking for mobile networks and mobile computing</li> -->
-                        <!-- <li>Mobile network management and architecture design with data analysis and learning</li> -->
-                        <li>Novel applications of AR/VR/MR in education, entertainment, healthcare, training, etc</li>
-                        <!-- <li>Future Internet architecture for efficient mobility support</li> -->
-                        <!-- <li>Resource orchestration in next-generation networks</li> -->
+                        <li>Novel applications of AR/VR/MR in education, entertainment, healthcare, training, etc</li>                       
                         <li>Scalability and heterogeneity of multi-user XR and the metaverse</li>
                         <li>Security and privacy in AR/VR/MR and the metaverse</li>
                     </ul>
