--- a/committees.html
+++ b/committees.html
@@ -8,14 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
        content="The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom) 2023. The workshop will be held on the xx Oct, 2023. Immercom is in conjunction with MobiCom 2023">
-    <title>Immercom 2023</title>
+    <title>ImmerCom 2023</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="jumbotron.css" rel="stylesheet">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="index.html">Immercom 2023</a>
+        <a class="navbar-brand" href="index.html">ImmerCom 2023</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
     <main role="main">
         <div class="jumbotron">
             <div class="container">
-                <h1 class="display-3">Immercom 2023</h1>
+                <h1 class="display-3">ImmerCom 2023</h1>
                 <p> <h5>Workshop on Mobile Immersive Computing, Networking, and Systems to be held in conjunction with MobiCom 2023 </h5></p>
                 <p><h5> xx, xx,  <b>  </b> xx Oct, 2023 </h5></p>
             </div>
