--- a/committees.html
+++ b/committees.html
@@ -86,7 +86,7 @@
                         <li>Sebastian Friston, University College London, UK</li>
 			<li>Tian Guo, Worcester Polytechnic Institute, USA</li>
                         <li>Sokol Kosta, Aalborg University, Denmark</li>
-			<li>Guillaume Lavoué', École Nationale d'Ingénieurs de Saint-Étienne, France</li>    
+			<li>Guillaume Lavoué, École Nationale d'Ingénieurs de Saint-Étienne, France</li>    
 			<li>Youngki Lee, Seoul National University, South Korea</li>
 			<li>Xiaoli Liu, University of Helsinki, Finland</li>
 			<li>Jiayi Meng, Purdue University, USA</li>
