--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         <div class="jumbotron">
             <div class="container">
                 <h1 class="display-3">ImmerCom 2023</h1>
-                <p> <h5>Workshop on Mobile Immersive Computing, Networking, and Systems to be held in conjunction with MobiCom 2023 </h5></p>
-                <p><h5> xx, xx,  <b>  </b> xx Oct, 2023 </h5></p>
+                <p> <h5>The 1st Workshop on Mobile Immersive Computing, Networking, and Systems.</h5></p> 
+		<p> <h5>To be held in conjunction with MobiCom 2023 </h5></p>
+                <p><h5>Madrid,Spain,  <b>  </b>Oct, 2023 </h5></p>
             </div>
         </div>
 
@@ -53,12 +54,16 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2>Welcome</h2>
-                    <p>The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom) 2023. 
-					<br> The workshop will be held on the xx of October 2023, in conjunction with <a
+                    <p>The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom 2023). 
+					<br> The workshop will be held on the October 2023, in conjunction with <a
                             href="https://www.sigmobile.org/mobicom/2023/">MobiCom 2023</a></p>
-                    <h3><FONT COLOR="red"> Updates</h3>
-                        <p> <b>[April 23rd] This website is under construction.</b>
-                    </font>
+                    <h3>Impotant Dates</h3>
+                       <ul>
+                        <li>Abstract registration deadline: June 12th, 2023, AoE </li>
+                        <li>Paper submission deadline: June 19th, 2023, AoE</li>
+                        <li>Paper acceptance notification: July 10th, 2023, AOE</li>
+                        <li>Camera-ready due: August 11, 2023, AoE</li>
+                    </ul>
 
                 </div>
             </div>
