--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <div class="jumbotron">
             <div class="container">
                 <h1 class="display-3">ImmerCom 2023</h1>
-                <p> <h5>The 1st Workshop on Mobile Immersive Computing, Networking, and Systems.</h5></p> 
-		<p> <h5>To be held in conjunction with MobiCom 2023 </h5></p>
+                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems.</h5></p> 
+		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
                 <p><h5>Madrid,Spain,  <b>  </b>Oct, 2023 </h5></p>
             </div>
         </div>
@@ -64,9 +64,12 @@
                         <li>Paper acceptance notification: July 10th, 2023, AOE</li>
                         <li>Camera-ready due: August 11, 2023, AoE</li>
                        </ul>
-		   <h4>Impotant Dates</h4>
+		   <h4>Announcements</h4>
                        <ul>
-                        <li>[April 22nd] AC</li>
+		       <li>April 24th,2023-Program committe announced</li>
+		       <li>April 23rd,2023-Submission instructions are online</li>
+		       <li>April 23rd,2023-Call for paper is online</li>
+                       <li>April 22nd,2023-ACM ImmerCom 2023 webpage is live</li>
                        </ul>
                 </div>
             </div>
