--- a/committees.html
+++ b/committees.html
@@ -20,33 +20,34 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+       <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="call.html">Call for Papers</a>
                 </li>
-                <li class="nav-item active">
+		<li class="nav-item">
+                    <a class="nav-link" href="submission.html">Paper Submission</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="committees.html">Committees</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="program.html">Technical Program</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="submission.html">Paper Submission</a>
-                </li>
+                </li>              
             </ul>
         </div>
-    </nav>
-
-    <main role="main">
+   </nav>
+   
+<main role="main">
         <div class="jumbotron">
             <div class="container">
                 <h1 class="display-3">ImmerCom 2023</h1>
-                <p> <h5>Workshop on Mobile Immersive Computing, Networking, and Systems to be held in conjunction with MobiCom 2023 </h5></p>
-                <p><h5> xx, xx,  <b>  </b> xx Oct, 2023 </h5></p>
+                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems.</h5></p> 
+		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
+                <p><h5>Madrid,Spain,  <b>  </b>Oct, 2023 </h5></p>
             </div>
         </div>
 
