--- a/submission.html
+++ b/submission.html
@@ -17,23 +17,23 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="call.html">Call for Papers</a>
+                </li>
+		<li class="nav-item">
+                    <a class="nav-link" href="submission.html">Paper Submission</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="committees.html">Committees</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="program.html">Technical Program</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="submission.html">Paper Submission</a>
-                </li>
+                </li>              
             </ul>
         </div>
    </nav>
@@ -42,17 +42,22 @@
         <div class="jumbotron">
             <div class="container">
                 <h1 class="display-3">ImmerCom 2023</h1>
-                <p> <h5>Workshop on Mobile Immersive Computing, Networking, and Systems to be held in conjunction with MobiCom 2023 </h5></p>
-                <p><h5> xx, xx,  <b>  </b> xx Oct, 2023 </h5></p>
+                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems.</h5></p> 
+		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
+                <p><h5>Madrid, Spain,  <b>  </b>Oct, 2023 </h5></p>
             </div>
         </div>
 
         <div class="container">
             <div class="row">
                 <div class="col-md-12">                   
-                    <h3><FONT COLOR="red"> Updates</h3>
-                        <p> <b>[April 23rd] TOB.</b>
-                    </font>
+                    <h2>Submission Instructions</h2>
+                        <p> Submissions must be original, unpublished work. They should not be under consideration at another venue including conferences and journals. 
+                            Submitted papers must be in PDF format and be at most six (6) pages in length, including all figures and tables in two-column 10pt ACM format. 
+                            Submissions may include as many additional pages as needed for references and for supplementary material in appendices. Papers must include author
+                            names and affiliations for single-blind peer reviewing by the PC. Authors of accepted submissions are expected to present and discuss their work at the workshop.</p>
+                        <p>Authors may find these <a href="https://www.acm.org/publications/proceedings-template">templates</a></p> useful in complying with the above requirements. It is the author's responsibility to verify that the submission is format-compliant.
+                            (Please note that the default template font is 9pt and must be changed to 10pt.)</p> 
 
                 </div>
             </div>
