--- a/submission.html
+++ b/submission.html
@@ -58,6 +58,19 @@
                             names and affiliations for single-blind peer reviewing by the PC. Authors of accepted submissions are expected to present and discuss their work at the workshop.</p>
                         <p>Authors may find these <a href="https://www.acm.org/publications/proceedings-template">templates</a></p> useful in complying with the above requirements. It is the author's responsibility to verify that the submission is format-compliant.
                             (Please note that the default template font is 9pt and must be changed to 10pt.)</p> 
+		    <h2>Submission Website</h2>
+                    <ul>
+                      <a href="https://immercom23.hotcrp.com/">ImmerCom2023 on HotCRP</a></p>
+                    </ul>
+		    
+		    <h2>Important Dates</h2>
+                    <ul>
+                        <li>Abstract registration deadline: June 12th, 2023, AoE </li>
+                        <li>Paper submission deadline: June 19th, 2023, AoE</li>
+                        <li>Paper acceptance notification: July 10th, 2023, AOE</li>
+                        <li>Camera-ready due: August 11, 2023, AoE</li>
+                    </ul>
+		    
 
                 </div>
             </div>
