--- a/submission.html
+++ b/submission.html
@@ -56,7 +56,7 @@
                             Submitted papers must be in PDF format and be at most six (6) pages in length, including all figures and tables in two-column 10pt ACM format. 
                             Submissions may include as many additional pages as needed for references and for supplementary material in appendices. Papers must include author
                             names and affiliations for single-blind peer reviewing by the PC. Authors of accepted submissions are expected to present and discuss their work at the workshop.</p>
-                        <p>Authors may find these <a href="https://www.acm.org/publications/proceedings-template">templates</a></p> useful in complying with the above requirements. It is the author's responsibility to verify that the submission is format-compliant.
+                        <p>Authors may find these <a href="https://www.acm.org/publications/proceedings-template">templates</a>useful in complying with the above requirements. It is the author's responsibility to verify that the submission is format-compliant.
                             (Please note that the default template font is 9pt and must be changed to 10pt.)</p> 
 		    <h2>Submission Website</h2>
                     <ul>
