--- a/committees.html
+++ b/committees.html
@@ -54,7 +54,7 @@
         <div class="container">           
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Steering Committe</h2>
+                    <h2>Steering Committee</h2>
                     <ul>
                         <li>Charlie Hu, Purdue University, USA</li>
                         <li>Klara Nahrstedt, University of Illinois at Urbana-Champaign, USA</li>
