--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                        </ul>
 		   <h3>Announcements</h3>
                        <ul>
-		       <li>April 24th,2023-Program committe announced</li>
+		       <li>April 24th,2023-Program committee announced</li>
 		       <li>April 23rd,2023-Submission instructions are online</li>
 		       <li>April 23rd,2023-Call for paper is online</li>
                        <li>April 22nd,2023-ACM ImmerCom 2023 webpage is live</li>
