--- a/submission.html
+++ b/submission.html
@@ -67,7 +67,7 @@
                     <ul>
                         <li>Abstract registration deadline: June 12th, 2023, AoE </li>
                         <li>Paper submission deadline: June 19th, 2023, AoE</li>
-                        <li>Paper acceptance notification: July 10th, 2023, AOE</li>
+                        <li>Paper acceptance notification: July 10th, 2023, AoE</li>
                         <li>Camera-ready due: August 11, 2023, AoE</li>
                     </ul>
 		    
