--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div class="jumbotron">
             <div class="container">
                 <h1 class="display-3">ImmerCom 2023</h1>
-                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems.</h5></p> 
+                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
 		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
-                <p><h5>Madrid, Spain,  <b>  </b>Oct, 2023 </h5></p>
+                <p><h5>Madrid, Spain,  <b>  </b>October, 2023 </h5></p>
             </div>
         </div>
 
@@ -55,7 +55,7 @@
                 <div class="col-md-12">
                     <h2>Welcome</h2>
                     <p>The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom 2023). 
-					<br> The workshop will be held on the October 2023, in conjunction with <a
+				The workshop will be held on the October 2023, in conjunction with <a
                             href="https://www.sigmobile.org/mobicom/2023/">MobiCom 2023</a></p>
                     <h3>Impotant Dates</h3>
                        <ul>
@@ -66,10 +66,10 @@
                        </ul>
 		   <h3>Announcements</h3>
                        <ul>
-		       <li>April 24th,2023-Program committee announced</li>
-		       <li>April 23rd,2023-Submission instructions are online</li>
-		       <li>April 23rd,2023-Call for paper is online</li>
-                       <li>April 22nd,2023-ACM ImmerCom 2023 webpage is live</li>
+		       <li>April 24th, 2023 - Program committee is announced</li>
+		       <li>April 23rd, 2023 - Submission instructions are online</li>
+		       <li>April 23rd, 2023 - Call for papers is online</li>
+                       <li>April 22nd, 2023 - ACM ImmerCom 2023 webpage is live</li>
                        </ul>
                 </div>
             </div>
