--- a/call.html
+++ b/call.html
@@ -44,9 +44,9 @@
         <div class="jumbotron">
             <div class="container">
                 <h1 class="display-3">ImmerCom 2023</h1>
-                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems.</h5></p> 
+                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
 		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
-                <p><h5>Madrid, Spain,  <b>  </b>Oct, 2023 </h5></p>
+                <p><h5>Madrid, Spain,  <b>  </b>October, 2023 </h5></p>
             </div>
         </div>
 
@@ -86,7 +86,10 @@
                         <li>Scalability and heterogeneity of multi-user XR and the metaverse</li>
                         <li>Security and privacy in AR/VR/MR and the metaverse</li>
                     </ul>
-
+			
+		    <h2>Best Paper Awards</h2>
+                    <p>All accepted regular papers by the workshop will be considered for the Best Paper Awards.</p>
+			
                     <h2>Important Dates</h2>
                     <ul>
                         <li>Abstract registration deadline: June 12th, 2023, AoE </li>
@@ -95,8 +98,7 @@
                         <li>Camera-ready due: August 11, 2023, AoE</li>
                     </ul>
                     
-                    <h2>Best Paper Awards</h2>
-                    <p>All accepted regular papers by the workshop will be considered for the Best Paper Awards.</p>
+                    
                 </div>
             </div>
             <hr>
