--- a/committees.html
+++ b/committees.html
@@ -45,9 +45,9 @@
         <div class="jumbotron">
             <div class="container">
                 <h1 class="display-3">ImmerCom 2023</h1>
-                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems.</h5></p> 
+                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
 		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
-                <p><h5>Madrid, Spain,  <b>  </b>Oct, 2023 </h5></p>
+                <p><h5>Madrid, Spain,  <b>  </b>October, 2023 </h5></p>
             </div>
         </div>
 
