--- a/submission.html
+++ b/submission.html
@@ -42,9 +42,9 @@
         <div class="jumbotron">
             <div class="container">
                 <h1 class="display-3">ImmerCom 2023</h1>
-                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems.</h5></p> 
+                <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
 		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
-                <p><h5>Madrid, Spain,  <b>  </b>Oct, 2023 </h5></p>
+                <p><h5>Madrid, Spain,  <b>  </b>October, 2023 </h5></p>
             </div>
         </div>
 
@@ -68,7 +68,7 @@
                         <li>Abstract registration deadline: June 12th, 2023, AoE </li>
                         <li>Paper submission deadline: June 19th, 2023, AoE</li>
                         <li>Paper acceptance notification: July 10th, 2023, AoE</li>
-                        <li>Camera-ready due: August 11, 2023, AoE</li>
+                        <li>Camera-ready due: August 11th, 2023, AoE</li>
                     </ul>
 		    
 
