--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h2>Welcome</h2>
                     <p>The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom 2023). 
 				The workshop will be held on the October 2023, in conjunction with <a
-                            href="https://www.sigmobile.org/mobicom/2023/">MobiCom 2023</a></p>
+                            href="https://www.sigmobile.org/mobicom/2023/">MobiCom 2023</a>.</p>
                     <h3>Impotant Dates</h3>
                        <ul>
                         <li>Abstract registration deadline: June 12th, 2023, AoE </li>
