--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 <main role="main">
         <div class="jumbotron">
             <div class="container">
-                <h1 class="display-3">ImmerCom 2023</h1>
+                <h1 class="display-3"><FONT COLOR="white"> ImmerCom 2023</h1>
                 <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
 		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
-                <p><h5>Madrid, Spain,  <b>  </b>October, 2023 </h5></p>
+                <p><h5>Madrid, Spain,  <b>  </b>October, 2023 </font></h5></p>
             </div>
         </div>
 
