--- a/committees.html
+++ b/committees.html
@@ -56,6 +56,7 @@
                 <div class="col-md-12">
                     <h2>Steering Committee</h2>
                     <ul>
+			<li>Songqing Chen, George Mason University, USA</li>
                         <li>Charlie Hu, Purdue University, USA</li>
                         <li>Klara Nahrstedt, University of Illinois at Urbana-Champaign, USA</li>
                         <li>Lili Qiu, University of Texas at Austin</li>
