--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                        </ul>
 		   <h3>Announcements</h3>
                        <ul>
+		       <li>April 26th, 2023 - Keynote is announced</li>
 		       <li>April 24th, 2023 - Program committee is announced</li>
 		       <li>April 23rd, 2023 - Submission instructions are online</li>
 		       <li>April 23rd, 2023 - Call for papers is online</li>
