--- a/program.html
+++ b/program.html
@@ -25,11 +25,6 @@
   </style>
 </head>
 	
-main .keynote {
-    display: block;
-    clear: both;
-    text-align: justify;
-}
 	
 <body>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -77,17 +72,15 @@ main .keynote {
 
 <h1 id="keynotes">Keynotes</h1>
 <h2 id="pablo-cesar-researcher-professor">Pablo Cesar (Researcher and Group Leader at CWI and Professor at TU Delft)</h2>
-<!-- <div class="fig-container">
- <img src="./pablo.jpg" alt="Pablo Cesar"">
+<div class="fig-container">
+ <img src="./pablo.jpg" alt="Pablo Cesar">
   </div>	
--->	
-<div class="keynote">
 	<img src="./pablo.jpg" alt="Pablo Cesar" title="Pablo Cesar">
 <strong>Title</strong>: Towards Volumetric Video Conferencing<br/>
 <strong>Abstract</strong>: With Social Extended Reality (XR) emerging as a new medium, where users can remotely experience immersive content with others, the vision of a true feeling of ‘being there together’ has become a realistic goal. This keynote will provide an overview about the challenges to achieve such a goal, based on results from practical case studies like the <a href="https://transmixr.eu">TRANSMIXR</a> and <a href="https://youtu.be/zzB7B6EAU9c">MediaScape XR</a> projects. 
 	We will discuss about different technologies, like point clouds, that can be used as the format for representing highly-realistic digital humans, and about metrics and protocols for quantifying the quality of experience. The final intention of the talk is to shed some light on social XR, as a new group of virtual reality experiences based on social photorealistic immersive content. We will discuss about the challenges regarding production and user-centric processes, and discover the new opportunities open by this new medium.<br/>
 <strong>Speaker Bio</strong>: Pablo Cesar has led the Distributed and Interactive Systems (DIS) group at CWI since January 2014 and is Professor of Human-Centered Multimedia Systems in the Department of Intelligent Systems (INSY) at TU Delft. He has received the prestigious 2020 Netherlands Prize for ICT Research. He is IEEE (Institute of Electrical and Electronics Engineers) Senior member, the highest grade for which IEEE members can apply, and ACM (Association for Computing Machinery) Distinguished Member, cited for significant achievements across the computing field recognizing up to 10 percent of ACM worldwide membership. His research focuses on measuring and evaluating the way users interact and communicate with each other using a wide range of decentralized digital systems. Cesar has co-directed over 15 externally funded research projects (H2020, FP7, FP6, PPP, NWO).</div>
-</div>
+
 		
                 </div>
             </div>
