--- a/program.html
+++ b/program.html
@@ -70,7 +70,7 @@
                    
                         
 
-<h1 id="keynotes">Keynotes</h1>
+<h1 id="keynotes">Keynote</h1>
 <h2 id="pablo-cesar-researcher-professor">Pablo Cesar (Researcher and Group Leader at CWI and Professor at TU Delft)</h2>
 <div class="fig-container">
  <img src="./pablo.jpg" alt="Pablo Cesar">
