--- a/committees.html
+++ b/committees.html
@@ -59,7 +59,7 @@
 			<li>Songqing Chen, George Mason University, USA</li>
                         <li>Charlie Hu, Purdue University, USA</li>
                         <li>Klara Nahrstedt, University of Illinois at Urbana-Champaign, USA</li>
-                        <li>Lili Qiu, University of Texas at Austin</li>
+                        <li>Lili Qiu, University of Texas at Austin, USA</li>
                     </ul>
 		    <h2>Program Co-chairs</h2>
                     <ul>
