--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                     <p>The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom 2023). 
 				The workshop will be held on the October 2023, in conjunction with <a
                             href="https://www.sigmobile.org/mobicom/2023/">MobiCom 2023</a>.</p>
+		    <p style="color:#FF0000">Please kindly note that in-person participation at this workshop is strongly encouraged, but remote presentation can be 
+			    made available upon request by the authors of accepted papers.</p>
                     <h3>Important Dates</h3>
                        <ul>
                         <li>Abstract registration deadline: June 12th, 2023, AoE </li>
