--- a/call.html
+++ b/call.html
@@ -67,6 +67,8 @@
                        immersive content delivery, AR/VR/MR, and the metaverse. It also welcomes papers that summarize research challenges, survey existing solutions, and/or propose visionary solutions to
                        ongoing issues in mobile XR and the metaverse.</p>
 
+		    <p style="color:#FF0000">Please kindly note that in-person participation at this workshop is strongly encouraged, but remote presentation can be made available upon request by the authors 
+			    of accepted papers.</p>
                     <h2>Topics of Interest</h2>
                     <p>Key research topics include but are not limited to: 
                     </p>
