--- a/committees.html
+++ b/committees.html
@@ -60,6 +60,7 @@
                         <li>Charlie Hu, Purdue University, USA</li>
                         <li>Klara Nahrstedt, University of Illinois at Urbana-Champaign, USA</li>
                         <li>Lili Qiu, University of Texas at Austin, USA</li>
+			<li>Anthony Rowe, Carnegie Mellon University, USA</li>
                     </ul>
 		    <h2>Program Co-chairs</h2>
                     <ul>
