--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-       content="The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom) 2023. The workshop will be held on the xx Oct, 2023. Immercom is in conjunction with MobiCom 2023">
+       content="The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems 
+		(ImmerCom) 2023. The workshop will be held on October 6, 2023. Immercom is in conjunction with MobiCom 2023">
     <title>ImmerCom 2023</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="jumbotron.css" rel="stylesheet">
@@ -46,7 +47,7 @@
                 <h1 class="display-3"> ImmerCom 2023</h1>
                 <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
 		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
-                <p><h5>October, 2023, <b>  </b>Madrid, Spain </h5></p>
+                <p><h5>October 6, 2023, <b>  </b>Madrid, Spain </h5></p>
             </div>
         </div>
 
@@ -55,7 +56,7 @@
                 <div class="col-md-12">
                     <h2>Welcome</h2>
                     <p>The program committee is delighted to invite you to the 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems (ImmerCom 2023). 
-				The workshop will be held on the October 2023, in conjunction with <a
+				The workshop will be held on the October 6, 2023, in conjunction with <a
                             href="https://www.sigmobile.org/mobicom/2023/">MobiCom 2023</a>.</p>
 		    <p style="color:#FF0000">Please kindly note that in-person participation at this workshop is strongly encouraged, but remote presentations can be 
 			    made available upon request by the authors of accepted papers.</p>
