--- a/submission.html
+++ b/submission.html
@@ -44,7 +44,7 @@
                 <h1 class="display-3">ImmerCom 2023</h1>
                 <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
 		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
-                <p> <h5>October, 2023, <b>  </b>Madrid, Spain </h5></p>
+                <p> <h5>October 6, 2023, <b>  </b>Madrid, Spain </h5></p>
             </div>
         </div>
 
