--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <title>ImmerCom 2023</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="jumbotron.css" rel="stylesheet">
+   
+	<style>
+        .lineS {
+            background-color: rgb(183, 216, 247);
+            padding-bottom: 15px;
+            padding-top: 15px;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+
+	</style>
+	
 </head>
 
 <body>
