--- a/index.html
+++ b/index.html
@@ -11,18 +11,7 @@
     <title>ImmerCom 2023</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="jumbotron.css" rel="stylesheet">
-   
-	<style>
-        .lineS {
-            background-color: rgb(183, 216, 247);
-            padding-bottom: 15px;
-            padding-top: 15px;
-            margin-left: 10px;
-            margin-right: 10px;
-        }
-
-	</style>
-	
+   	
 </head>
 
 <body>
@@ -53,6 +42,19 @@
         </div>
    </nav>
    
+	<div class="inner">
+                    <div class="bigbannert1 text-center">
+                        MobiCom 2023
+                    </div>
+                    <p style="font-size:120%;font-weight: bold;"> The 29th Annual International Conference on
+                        <br />
+                        Mobile Computing and Networking
+                        <br />
+                        
+                        2-6 Oct 2023, Madrid, Spain<br />
+                    </p>
+                </div>
+	
 <main role="main">
         <div class="jumbotron">
             <div class="container">
