--- a/committees.html
+++ b/committees.html
@@ -12,6 +12,15 @@
     <title>ImmerCom 2023</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="jumbotron.css" rel="stylesheet">
+	
+	  <style>
+    .text-background {
+        background-color: rgba(0, 0, 0, 0.5);  /* black background with 50% opacity */
+        color: #fff;  /* white text */
+        padding: 15px;
+    }
+    </style>
+	
 </head>
 
 <body>
@@ -45,10 +54,12 @@
 <main role="main">
         <div class="jumbotron">
             <div class="container">
+	       <div class="text-background"> 
                 <h1 class="display-3">ImmerCom 2023</h1>
                 <p> <h5>The 1st ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
 		<p> <h5>To be held in conjunction with ACM MobiCom 2023 </h5></p>
                 <p> <h5>October 6, 2023,  <b>  </b>Madrid, Spain </h5></p>
+	      </div>
             </div>
         </div>
 
