--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 			    made available upon request by the authors of accepted papers.</p>
                     <h3>Important Dates</h3>
                        <ul>
-                        <li>Abstract registration deadline: <del>June 12th, 2023, AoE</del> <p style="color:#FF0000">June 19th, 2023, AoE</p> </li>
-                        <li>Paper submission deadline: <del>June 19th, 2023, AoE</del> <p style="color:#FF0000">June 26th, 2023, AoE</p> </li>
+                        <li>Abstract registration deadline: <del>June 12th, 2023, AoE</del> June 19th, 2023, AoE </li>
+                        <li>Paper submission deadline: <del>June 19th, 2023, AoE</del> June 26th, 2023, AoE </li>
                         <li>Paper acceptance notification: July 10th, 2023, AoE</li>
                         <li>Camera-ready due: August 11th, 2023, AoE</li>
                        </ul>
