--- a/call.html
+++ b/call.html
@@ -106,8 +106,8 @@
 			
                     <h2>Important Dates</h2>
                     <ul>
-                        <li>Abstract registration deadline: June 12th, 2023, AoE </li>
-                        <li>Paper submission deadline: June 19th, 2023, AoE</li>
+                        <li>Abstract registration deadline: <del>June 12th, 2023, AoE</del> June 19th, 2023, AoE </li>
+                        <li>Paper submission deadline: <del>June 19th, 2023, AoE</del> June 26th, 2023, AoE </li>
                         <li>Paper acceptance notification: July 10th, 2023, AoE</li>
                         <li>Camera-ready due: August 11th, 2023, AoE</li>
                     </ul>
