--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 		(ImmerCom) 2023. The workshop will be held on October 6, 2023. Immercom is in conjunction with MobiCom 2023">
     <title>ImmerCom 2023</title>
     <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="jumbotron.css" rel="stylesheet">
+    <link href="jumbotron.css" rel="stylesheet">. 
    
 
     <style>
     .text-background {
         background-color: rgba(0, 0, 0, 0.5);  /* black background with 50% opacity */
         color: #fff;  /* white text */
-        padding: 15px;
+        padding: 15px;   
     }
     </style>
 	
@@ -82,6 +82,7 @@
                        </ul>
 		   <h3>Announcements</h3>
                        <ul>
+		       <li>June 13th, 2023 - Deadline is extended by one week</li>
 		       <li>April 26th, 2023 - Keynote is announced</li>
 		       <li>April 24th, 2023 - Program committee is announced</li>
 		       <li>April 23rd, 2023 - Submission instructions are online</li>
