--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 			    made available upon request by the authors of accepted papers.</p>
                     <h3>Important Dates</h3>
                        <ul>
-                        <li>Abstract registration deadline: <del>June 12th, 2023, AoE</del> June 19th, 2023, AoE </li>
-                        <li>Paper submission deadline: <del>June 19th, 2023, AoE</del> June 26th, 2023, AoE </li>
-                        <li>Paper acceptance notification: July 10th, 2023, AoE</li>
+                        <li>Abstract registration deadline: <del>June 12th, 2023, AoE</del> June 23rd, 2023, AoE </li>
+                        <li>Paper submission deadline: <del>June 19th, 2023, AoE</del> June 30th, 2023, AoE </li>
+                        <li>Paper acceptance notification: July 31st, 2023, AoE</li>
                         <li>Camera-ready due: August 11th, 2023, AoE</li>
                        </ul>
 		   <h3>Announcements</h3>
