--- a/submission.html
+++ b/submission.html
@@ -77,9 +77,9 @@
 		    
 		    <h2>Important Dates</h2>
                     <ul>
-                        <li>Abstract registration deadline: <del>June 12th, 2023, AoE</del> June 19th, 2023, AoE </li>
-                        <li>Paper submission deadline: <del>June 19th, 2023, AoE</del> June 26th, 2023, AoE </li>
-                        <li>Paper acceptance notification: July 10th, 2023, AoE</li>
+                        <li>Abstract registration deadline: <del>June 12th, 2023, AoE</del> June 23rd, 2023, AoE </li>
+                        <li>Paper submission deadline: <del>June 19th, 2023, AoE</del> June 30th, 2023, AoE </li>
+                        <li>Paper acceptance notification: July 31st, 2023, AoE</li>
                         <li>Camera-ready due: August 11th, 2023, AoE</li>
                     </ul>
 		    
