--- a/committees.html
+++ b/committees.html
@@ -95,6 +95,8 @@
                         <li>Kittipat Apicharttrisorn, Nokia Bell Labs, USA</li>
                         <li>Dimitris Chatzopoulos, University College Dublin, Ireland</li>
                         <li>Bo Chen, University of Illinois at Urbana-Champaign, USA</li>
+			<li>Jiasi Chen, University of Michigan, USA</li>
+			<li>Eduardo Cuervo, Google, USA</li>
 			<li>Mallesham Dasar, Carnegie Mellon University, USA</li>
                         <li>Jeroen Famaey, University of Antwerp, Belgium</li>
                         <li>Huber Flores, University of Tartu, Estonia</li>
@@ -109,11 +111,14 @@
                         <li>Niall Murray, Athlone Institute of Technology, Ireland</li>
                         <li>Xiuquan Qiao, Beijing University of Posts and Telecommunications, China</li>
                         <li>Sanja Scepanovic, Nokia Bell Labs, UK</li>
+			<li>Amit Sheoran, AT&T, USA</li>
+			<li>Ashiwan Sivakumar, AT&T, USA</li>
                         <li>Xiang Su, Norwegian University of Science and Technology, Norway</li>
 			<li>Sheng Wei, Rutgers University, USA</li>
 			<li>Di Wu, Sun Yat-sen University, China</li>
 			<li>Hui-Yin Wu, Inria, France</li>						
 			<li>Zehui Xiong, Singapore University of Technology and Design, Singapore</li>
+			<li>Ding Zhang, Amazon, USA</li>
 			</ul>                    
                 </div>
             </div>
