--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                        <ul>
                         <li>Abstract registration deadline: <del>June 12th, 2023, AoE</del> June 23rd, 2023, AoE </li>
                         <li>Paper submission deadline: <del>June 19th, 2023, AoE</del> June 30th, 2023, AoE </li>
-                        <li>Paper acceptance notification: July 31st, 2023, AoE</li>
-                        <li>Camera-ready due: August 11th, 2023, AoE</li>
+                        <li>Paper acceptance notification: July 25th, 2023, AoE</li>
+                        <li>Camera-ready due: August 7th, 2023, AoE</li>
                        </ul>
 		   <h3>Announcements</h3>
                        <ul>
