--- a/committees.html
+++ b/committees.html
@@ -46,7 +46,10 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="program.html">Technical Program</a>
-                </li>              
+                </li>           
+		<li class="nav-item">
+                    <a class="nav-link" href="keynote.html">Keynote</a>
+                </li>
             </ul>
         </div>
    </nav>
