--- a/program.html
+++ b/program.html
@@ -58,7 +58,10 @@
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="program.html">Technical Program</a>
-                </li>              
+                </li>     
+		<li class="nav-item">
+                    <a class="nav-link" href="keynote.html">Keynote</a>
+                </li>
             </ul>
         </div>
    </nav>
