--- a/program.html
+++ b/program.html
@@ -92,19 +92,19 @@
 <!-- session header -->
 <li">
   <h3 style="font-weight: 700">
-    9:00am–9:15am <i>&nbsp;&nbsp;&nbsp;&nbsp;</i> Opening Remarks
+    9:00am–9:10am <i>&nbsp;&nbsp;&nbsp;&nbsp;</i> Opening Remarks
   </h3>
 </li>
 
 <!-- session header -->
-<li class="ui-li ui-bar-a prog-item ui-li-divider prog-sunday" data-role="list-divider">
+<li>
   <h3 style="font-weight: 700">
-    9:15am–10:15am <i>&nbsp;&nbsp;&nbsp;&nbsp;</i> Keynote 1
+    9:10am–10:00am <i>&nbsp;&nbsp;&nbsp;&nbsp;</i> Keynote 1
   </h3>
 </li>
 
 <!-- single item in a session -->
-<li data-icon="false" class="prog-item prog-monday">
+<li data-icon="false">
   <table>
     <tr>
       <td style="width:100%;text-align:left;">
@@ -119,9 +119,9 @@
 </li>
 
 <!-- start break item -->
-<li class="prog-break prog-item ui-li-divider prog-sunday" data-role="list-divider">
+<li>
   <h3 style="font-weight: 500;">
-    <strong>10:15am-10:30am Break</strong>
+    <strong>10:00am-10:30am Break</strong>
   </h3>
 </li>
 
