--- a/program.html
+++ b/program.html
@@ -99,6 +99,35 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td>&nbsp;</td>
                     <td>&nbsp;</td>
                 </tr> -->
+
+		<tr>
+                    <td>9:05-10:00</td>
+                    <td>
+                     <ulx>
+                            <h3>Keynote by Pablo Cesar (Researcher and Group Leader at CWI and Professor at TU Delft)<br> 
+                            <font size="3", style="font-weight:normal">Towards Volumetric Video Conferencing</font></h3><br>
+                    </ulx>
+                    </td>
+                </tr>
+                <tr>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                </tr>
+
+		                <tr>
+                    <td>10:00-10:30</td>
+                    <td>
+                     <ulx>
+                            <h3>Coffee Break<br>
+                            <font size="3", style="font-weight:normal">Room: TBD</font></h3><br>
+                    </ulx>
+                    </td>
+                </tr>
+                <tr>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                </tr>
+
                 <tr>
                     <td>9:05 - 10:00</td>
                     <td>
@@ -139,19 +168,6 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                             <b>Programmable Millimeter-Wave MIMO Radios with Real-Time Baseband Processing</b><br>
                             <font size="2">Z. Qi, Z. Gao, C. Tung, T. Chen</font><br>
                         </ulx>
-                    </td>
-                </tr>
-                <tr>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td>10:00-10:30</td>
-                    <td>
-                     <ulx>
-                            <h3>Coffee Break<br>
-                            <font size="3", style="font-weight:normal">Room: TBD</font></h3><br>
-                    </ulx>
                     </td>
                 </tr>
                 <tr>
