--- a/program.html
+++ b/program.html
@@ -90,7 +90,7 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                 
                 <tr>
                     <td>9:00 - 9:05</td>
-                    <td><ulx><h3>Opening Remarks<br>
+                    <td><ulx><h4>Opening Remarks<br>
                             <font size="3", style="font-weight:normal">Bo Han and Robert LiKamWa</font></h3><br>
                         </ulx>
                     </td>
@@ -104,7 +104,7 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td>9:05-10:00</td>
                     <td>
                      <ulx>
-                            <h3>Keynote by Pablo Cesar (Researcher and Group Leader at CWI and Professor at TU Delft)<br> 
+                            <h4>Keynote by Pablo Cesar (Researcher and Group Leader at CWI and Professor at TU Delft)<br> 
                             <font size="3", style="font-weight:normal">Towards Volumetric Video Conferencing</font></h3><br>
                     </ulx>
                     </td>
@@ -118,7 +118,7 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td>10:00-10:30</td>
                     <td>
                      <ulx>
-                            <h3>Coffee Break<br>
+                            <h4>Coffee Break<br>
                             <font size="3", style="font-weight:normal">Room: TBD</font></h3><br>
                     </ulx>
                     </td>
@@ -128,11 +128,11 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td>&nbsp;</td>
                 </tr>
 
-                <tr>
-                    <td>9:05 - 10:00</td>
+		                <tr>
+                    <td>10:30 - 11:30</td>
                     <td>
                         <ulx>
-                            <h3>Session 1: mmWave, Beamforming, IRS, and Massive MIMO<br>
+                            <h4>Session 1: Video Streaming and Analytics<br>
                             <font size="3", style="font-weight:normal">Session chair: TBD</font></h3><br>
                         </ulx>
                     </td>
@@ -174,6 +174,54 @@ The workshop will take place on October 6<sup>th</sup>, 2023, conference room Pr
                     <td>&nbsp;</td>
                     <td>&nbsp;</td>
                 </tr>
+
+		<tr>
+                    <td>11:30 - 12:30</td>
+                    <td>
+                        <ulx>
+                            <h4>Session 2: Immersive Applications<br>
+                            <font size="3", style="font-weight:normal">Session chair: TBD</font></h3><br>
+                        </ulx>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align:text-top;"></td>
+                    <td>
+                        <ulx>
+                            <b>MetaShield: a Multi-Function AP-Surrounding Metasurface</b><br>
+                            <font size="2">B. Bilgin, E. Knightly</font><br>
+                        </ulx>
+                    </td>
+                </tr>
+                <tr>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td style="vertical-align:text-top;"></td>
+                    <td>
+                        <ulx>
+                            <b>AraMIMO: Programmable TVWS mMIMO Living Lab for Rural Wireless</b><br>
+                            <font size="2">T. Islam, T. Zhang, J. Boateng, E. Gosling, G. Zu, S. Babu, H. Zhang, D. Qiao</font><br>
+                        </ulx>
+                    </td>
+                </tr>
+                <tr>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td style="vertical-align:text-top;"></td>
+                    <td>
+                        <ulx>
+                            <b>Programmable Millimeter-Wave MIMO Radios with Real-Time Baseband Processing</b><br>
+                            <font size="2">Z. Qi, Z. Gao, C. Tung, T. Chen</font><br>
+                        </ulx>
+                    </td>
+                </tr>
+                <tr>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                </tr>
+		    
 	    </table>
 			
                 </div>
